<!--
  ~ MIT License
  ~
  ~ Copyright (c) 2016. Dmytro Karataiev
  ~
  ~ Permission is hereby granted, free of charge, to any person obtaining a copy
  ~ of this software and associated documentation files (the "Software"), to deal
  ~ in the Software without restriction, including without limitation the rights
  ~ to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
  ~ copies of the Software, and to permit persons to whom the Software is
  ~ furnished to do so, subject to the following conditions:
  ~
  ~ The above copyright notice and this permission notice shall be included in all
  ~ copies or substantial portions of the Software.
  ~
  ~ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
  ~ IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
  ~ FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
  ~ AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
  ~ LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
  ~ OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
  ~ SOFTWARE.
  ~
  -->

<resources xmlns:xliff="http://schemas.android.com/tools">
    <string name="app_name">Simple Flashlight</string>
    <string name="flashlight_switch">Toggle</string>
    <string name="flashlight_status_on">Turn on</string>
    <string name="flashlight_status_off">Turn off</string>
    <string name="flashlight_status_blink">Blink Mode</string>

    <!-- Preferences screen -->
    <string name="preferences">Preferences</string>
    <string name="pref_orientation">Lock Screen Orientation</string>
    <string name="pref_orientation_key" translatable="false">orientation</string>
    <string name="pref_orientation_portrait">Portrait only</string>
    <string name="pref_orientation_portrait_off">Rotation enabled</string>

    <!-- Morse code screen -->
    <string name="morse_code_textfield">Enter your message: </string>
    <string name="morse_expl">1. The length of the dot is one unit. \n2. A dash is three units. \n3. The space between parts of the same letter is one unit.
    \n4. The space between letters is three units. \n5. The space between words is seven units.</string>
    <string name="morse_message_title">Current message:</string>
    <string name="morse_speed">Speed: <xliff:g id="speed">%1$d</xliff:g></string>

    <!-- Pager titles -->
    <string name="morse_screen">Morse code</string>
    <string name="flashlight_screen">Flashlight</string>
    <string name="emergency_screen">Emergency signal</string>
    <string name="speed_increase">Increase speed</string>
    <string name="speed_decrease">Speed decrease</string>

</resources>
